# llm_engineering

./: pyproject.toml  start.sh
week1/: day1.ipynb  day2 EXERCISE.ipynb
