[project]
name = "llms"
version = "0.1.0"
requires-python = ">=3.9.0"

dependencies = [
  "python-dotenv",
  "requests",
  "numpy",
  "pandas",
  "scipy",
  "torch",
  "jupyterlab",
  "ipywidgets",
  "matplotlib",
  "scikit-learn",
  "chromadb",
  "jupyter-dash",
  "pyarrow",
  "beautifulsoup4",
  "plotly",
  "transformers",
  "sentence-transformers",
  "datasets==3.6.0",
  "openai",
  "anthropic",
  "google-generativeai",
  "gradio",
  "gensim",
  "modal",
  "ollama",
  "psutil",
  "setuptools",
  "speedtest-cli",
  "langchain",
  "langchain-core",
  "langchain-text-splitters",
  "langchain-openai",
  "langchain-chroma",
  "langchain-community",
  "feedparser",
  "twilio",
  "pydub",
  "protobuf==3.20.2"
]

